dons_tests/valid_kxi/scope_param.kxi
class MyClass { 
    public void myfunc(int x) {
        return x + 1;
    }
}
void main(){}
