dons_tests/invalid_kxi/non_static_non_instanced.kxi
class MyClass {
    public int x;
    public int myfunc() {
        return x + 1;
    }
}
void main(){
    MyClass.x = MyClass.myfunc();
}
